tests/compile_fail/call-str.stderr
error: expected identifier
 --> $DIR/call-str.rs:7:12
  |
7 |     #[call("len")]
  |            ^^^^^
